--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -39,6 +39,16 @@
     }
 }
 
+@mixin device-orientation($orientation) {
+    @if not ($orientation ==portrait or $orientation ==landscape) {
+        @error "device-orientation mixin: $orientation must be 'portrait' or 'landscape'.";
+    }
+
+    @media screen and (orientation: #{$orientation}) {
+        @content;
+    }
+}
+
 //Other
 //Flex mixins
 @mixin center-flex($gap: 0px) {
